--- a/xrf-processor/package.json
+++ b/xrf-processor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xrf-processor",
-  "version": "0.0.1",
+  "name": "lbp-multifamily-convert",
+  "version": "1.1.0",
   "private": true,
   "engines": {
     "node": ">=18.17.1 <19.0.0"
